app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: aakarshak1/ems-app
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-app-to-db
spec:
  podSelector:
    matchLabels:
      app: app
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mysqldb
  policyTypes:
    - Ingress


#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: my-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - host: ems
#      http:
#        paths:
#          - path: /app
#            pathType: Prefix
#            backend:
#              service:
#                name: app-service
#                port:
#                  number: 8081
#          - path: /mysql
#            pathType: Prefix
#            backend:
#              service:
#                name: mysqldb-service
#                port:
#                  number: 3306
